[package]
name = "harmony-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'

[dependencies]
url = "2.3.1"
sd-notify = "0.4.1"
clap = { version = "4.1.13" }
tokio = { version = "1", features = ["full"] }
libc = { version = "0.2" }
log = { version = "0.4" }
env_logger = { version = "0.10.0" }
base64 = { version = "0.21.0" }
async-recursion = { version = "1.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"